
2011-03-09  Cedric Bail

	* Fix stat failure when file size in bytes or the number of blocks
	allocated to the file or the file serial number didn't fit in 32bits.

2011-03-18  Mike Blumenkrantz

        * Use stringshare for eina_error messages
        * add eina_error_find to match an error message with its Eina_Error

2011-04-06  Gustavo Sverzut Barbieri

	* Add Simple XML parser API.

2011-04-11  Cedric Bail

	* Add eina_inlist_sort.
	* Add eina_mempool_repack.
	* Add Eina_Object API, an helper for providing memory allocation with a redirection.

2011-04-13  Cedric Bail & Vincent Torri

	* Add Eina_File API, a portable mmap helper with some cache and tracking feature.

2011-04-22  Vincent Torri

        * Add Eina_Lock API, a portable solution across various system for locking/unlocking mutex.

2011-04-24  Carsten Haitzler (The Rasterman)

        * Add a prefix location finder api to eina. Beta status. needs
        more use from higher up libs/apps first.

2011-04-24  Vincent Torri

        * Fix uninstallation of the mempools modules

2011-04-27  Vincent Torri

        * Fix static build of the buddy mempool

2011-04-29  Cedric Bail

	* Add Eina_Refcount macro helper. You should really use them when running with thread !

2011-05-14  Vincent Torri

	* Add Eina_Condition API on Windows.

2011-05-17  Tom Hacohen (TAsn)

	* Added eina_binbuf: This is just like strbuf but for binary blobs.
	  Requested by discomfitor and honestly it looks needed.

2011-05-18  Cedric Bail

	* Fix eina_share_common_init to be called only once.

2011-05-24  Vincent Torri

	* Implement eina_sched_prio_drop() on Windows

2011-05-24  Cedric Bail

	* Add eina_inlist_sorted_insert.

2011-05-30  Cedric Bail

	* Add eina_condition_timedwait.

2011-05-31  Cedric Bail

	* Fix eina_hash_set to handle data == NULL like eina_hash_del.

2011-06-3  Vincent Torri

        * Fix static linking with eina (iconv could potentially not be
	passed to the linker)